--- a/ui/settings.ui
+++ b/ui/settings.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>615</width>
-    <height>367</height>
+    <width>593</width>
+    <height>473</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -23,7 +23,7 @@
       <enum>QTabWidget::Rounded</enum>
      </property>
      <property name="currentIndex">
-      <number>0</number>
+      <number>1</number>
      </property>
      <widget class="QWidget" name="tab">
       <attribute name="title">
@@ -73,28 +73,79 @@
       <layout class="QHBoxLayout" name="horizontalLayout_2">
        <item>
         <layout class="QGridLayout" name="gridLayout">
-         <item row="6" column="1">
-          <widget class="QLabel" name="lbl_color_weekend_background">
-           <property name="maximumSize">
-            <size>
-             <width>40</width>
-             <height>16777215</height>
-            </size>
-           </property>
-           <property name="styleSheet">
-            <string notr="true">background-color: rgb(0, 85, 0);</string>
-           </property>
+         <item row="9" column="1">
+          <widget class="QLabel" name="label_5">
            <property name="text">
-            <string/>
+            <string>Selected date foreground</string>
            </property>
           </widget>
          </item>
-         <item row="7" column="1">
-          <widget class="QLabel" name="label_6">
+         <item row="13" column="1">
+          <spacer name="verticalSpacer_3">
+           <property name="orientation">
+            <enum>Qt::Vertical</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>20</width>
+             <height>40</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+         <item row="6" column="2">
+          <widget class="QToolButton" name="btn_color_weekend_background">
            <property name="text">
-            <string>Week-end diary foreground</string>
+            <string>...</string>
            </property>
           </widget>
+         </item>
+         <item row="2" column="3">
+          <spacer name="horizontalSpacer_2">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>40</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+         <item row="8" column="2">
+          <widget class="QToolButton" name="btn_color_weekend_foreground">
+           <property name="text">
+            <string>...</string>
+           </property>
+          </widget>
+         </item>
+         <item row="4" column="2">
+          <widget class="QToolButton" name="btn_color_weekday_foreground">
+           <property name="text">
+            <string>...</string>
+           </property>
+          </widget>
+         </item>
+         <item row="5" column="1">
+          <widget class="QLabel" name="label_4">
+           <property name="text">
+            <string>Week-end diary background</string>
+           </property>
+          </widget>
+         </item>
+         <item row="2" column="0">
+          <spacer name="horizontalSpacer_3">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>40</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
          </item>
          <item row="8" column="1">
           <widget class="QLabel" name="lbl_color_weekend_foreground">
@@ -112,51 +163,51 @@
            </property>
           </widget>
          </item>
-         <item row="2" column="0">
-          <spacer name="horizontalSpacer_3">
-           <property name="orientation">
-            <enum>Qt::Horizontal</enum>
-           </property>
-           <property name="sizeHint" stdset="0">
+         <item row="6" column="1">
+          <widget class="QLabel" name="lbl_color_weekend_background">
+           <property name="maximumSize">
             <size>
              <width>40</width>
-             <height>20</height>
+             <height>16777215</height>
             </size>
            </property>
-          </spacer>
-         </item>
-         <item row="5" column="1">
-          <widget class="QLabel" name="label_4">
+           <property name="styleSheet">
+            <string notr="true">background-color: rgb(0, 85, 0);</string>
+           </property>
            <property name="text">
-            <string>Week-end diary background</string>
+            <string/>
            </property>
           </widget>
          </item>
-         <item row="8" column="2">
-          <widget class="QToolButton" name="btn_color_weekend_foreground">
+         <item row="2" column="1">
+          <widget class="QLabel" name="lbl_color_weekday_background">
+           <property name="maximumSize">
+            <size>
+             <width>40</width>
+             <height>16777215</height>
+            </size>
+           </property>
+           <property name="styleSheet">
+            <string notr="true">background-color: rgb(0, 85, 0);</string>
+           </property>
            <property name="text">
-            <string>...</string>
+            <string/>
            </property>
           </widget>
          </item>
-         <item row="3" column="1">
-          <widget class="QLabel" name="label_3">
-           <property name="text">
-            <string>Weekday diary foreground</string>
+         <item row="10" column="1">
+          <widget class="QLabel" name="lbl_color_selected_foreground">
+           <property name="maximumSize">
+            <size>
+             <width>40</width>
+             <height>16777215</height>
+            </size>
            </property>
-          </widget>
-         </item>
-         <item row="4" column="2">
-          <widget class="QToolButton" name="btn_color_weekday_foreground">
-           <property name="text">
-            <string>...</string>
+           <property name="styleSheet">
+            <string notr="true">background-color: rgb(0, 85, 0);</string>
            </property>
-          </widget>
-         </item>
-         <item row="6" column="2">
-          <widget class="QToolButton" name="btn_color_weekend_background">
            <property name="text">
-            <string>...</string>
+            <string/>
            </property>
           </widget>
          </item>
@@ -167,8 +218,42 @@
            </property>
           </widget>
          </item>
-         <item row="2" column="1">
-          <widget class="QLabel" name="lbl_color_weekday_background">
+         <item row="0" column="1">
+          <spacer name="verticalSpacer_5">
+           <property name="orientation">
+            <enum>Qt::Vertical</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>20</width>
+             <height>40</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+         <item row="3" column="1">
+          <widget class="QLabel" name="label_3">
+           <property name="text">
+            <string>Weekday diary foreground</string>
+           </property>
+          </widget>
+         </item>
+         <item row="11" column="1">
+          <widget class="QLabel" name="label_8">
+           <property name="text">
+            <string>Selected date background</string>
+           </property>
+          </widget>
+         </item>
+         <item row="7" column="1">
+          <widget class="QLabel" name="label_6">
+           <property name="text">
+            <string>Week-end diary foreground</string>
+           </property>
+          </widget>
+         </item>
+         <item row="4" column="1">
+          <widget class="QLabel" name="lbl_color_weekday_foreground">
            <property name="maximumSize">
             <size>
              <width>40</width>
@@ -190,8 +275,8 @@
            </property>
           </widget>
          </item>
-         <item row="4" column="1">
-          <widget class="QLabel" name="lbl_color_weekday_foreground">
+         <item row="12" column="1">
+          <widget class="QLabel" name="lbl_color_selected_background">
            <property name="maximumSize">
             <size>
              <width>40</width>
@@ -206,44 +291,19 @@
            </property>
           </widget>
          </item>
-         <item row="2" column="3">
-          <spacer name="horizontalSpacer_2">
-           <property name="orientation">
-            <enum>Qt::Horizontal</enum>
+         <item row="10" column="2">
+          <widget class="QToolButton" name="btn_color_selected_foreground">
+           <property name="text">
+            <string>...</string>
            </property>
-           <property name="sizeHint" stdset="0">
-            <size>
-             <width>40</width>
-             <height>20</height>
-            </size>
-           </property>
-          </spacer>
+          </widget>
          </item>
-         <item row="9" column="1">
-          <spacer name="verticalSpacer_3">
-           <property name="orientation">
-            <enum>Qt::Vertical</enum>
+         <item row="12" column="2">
+          <widget class="QToolButton" name="btn_color_selected_background">
+           <property name="text">
+            <string>...</string>
            </property>
-           <property name="sizeHint" stdset="0">
-            <size>
-             <width>20</width>
-             <height>40</height>
-            </size>
-           </property>
-          </spacer>
-         </item>
-         <item row="0" column="1">
-          <spacer name="verticalSpacer_5">
-           <property name="orientation">
-            <enum>Qt::Vertical</enum>
-           </property>
-           <property name="sizeHint" stdset="0">
-            <size>
-             <width>20</width>
-             <height>40</height>
-            </size>
-           </property>
-          </spacer>
+          </widget>
          </item>
         </layout>
        </item>
